apps/base/nextcloud/app/nextcloud.ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
    - cloudflare
  routes:
    - match: Host(`cloud.winetree94.com`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
  tls:
    secretName: letsencrypt-cert
